[package]
name = "citiesbox-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[build-dependencies]
cxx-build = "1.0"

[profile.dev]
incremental = false
opt-level = 0
debug = true
panic = "unwind"
